@@ -1,0 +1,11 @@
+## Process this file with automake to produce Makefile.in
+
+
+perldir = @PERLPATH@/EBox/Types/Text
+
+nobase_perl_DATA = WriteOnce.pm
+SOURCES = $(nobase_perl_DATA)
+
+MAINTAINERCLEANFILES = Makefile.in
+
+EXTRA_DIST = $(nobase_perl_DATA)
